--- a/app/common/repositories.yaml
+++ b/app/common/repositories.yaml
@@ -1,5 +1,5 @@
 repositories:
   - name: bitnami
     url: https://charts.bitnami.com/bitnami
-  - name: charts-incubator
+  - name: incubator
     url: https://charts.helm.sh/incubator
